--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "start:dev": "node -r dotenv/config  dist/index.js"
+    "start:dev": "node -r dotenv/config  dist/index.js",
+    "tsc": "echo \"Error: no test specified\" && exit 1 "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^5.7.1",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.4",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^5.7.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
